--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ html{
     -webkit-font-smoothing:antialiased;
 }
 
-
 header{
     background:var(--dark) ;
     clip-path: polygon(0 0, 100% 0,100% 100%,75% 87%,0 100%);
@@ -397,4 +396,335 @@ footer .copy-right{
 
 footer .footer-social{
     margin-bottom: 0.5rem;
+}
+
+
+.site-main-wrapper{
+    position: relative;
+}
+
+.hamberger{
+    
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    /* without z-index icon will be under the design it will show icon above the design */
+    z-index: 11;
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+.hamberger img{
+    height: 30px;
+}
+
+.mobile-nav{
+    position:fixed;
+    top: 0;
+    left:0;
+    z-index: 1001; 
+    background: var(--dark);
+    width: 100%;
+    height: 100%;
+    padding: 2rem;
+
+    /* move whole mobile nav outside of main view */
+    transform: translateX(-100%);
+    -webkit-transform: translateX(-100%) ;
+    -moz-transform: translateX(-100%);
+    -ms-transform:translateX(-100%) ;
+    -o-transform: translateX(-100%);
+    /* add animation */
+    transition:all .5s ease-in-out;
+    -o-transition:all .5s;
+    -moz-transition:all .5s ;
+    -webkit-transition:all .5s ;
+    -ms-transition:all .5s ;
+
+}
+.sub-mobile-nav{
+    padding-left: 2rem;
+}
+
+.open{
+    transform: translateX(0);
+    -webkit-transform: translateX(0) ;
+    -moz-transform: translateX(0);
+    -ms-transform:translateX(0) ;
+    -o-transform: translateX(0);
+}
+
+.times{
+    position:fixed;
+   
+    right: 60px;
+    border: none;
+    background: var(--dark);
+    outline: none;
+    cursor: pointer;
+}
+
+.times img{
+    height: 30px;
+    
+}
+
+.mobile-nav ul{
+    list-style-type: none;
+}
+
+.mobile-nav ul li a{
+    color: var(--pure);
+    text-decoration: none;
+    font-size: 2rem;
+    font-family: 'Poppins',sans-serif;
+    text-transform: uppercase;
+    transition:all .3s ease;
+    -o-transition:all .3s;
+    -moz-transition:all .3s ;
+    -webkit-transition:all .3s ;
+    -ms-transition:all .3s ;
+    font-size: large;
+    line-height: 2rem;
+}
+
+.mobile-nav ul li a:hover{
+    color: var(--primary);
+}
+
+/* media query */
+
+@media(min-width:1311px){
+    .hamberger{
+        visibility: hidden;
+    }
+}
+ @media(max-width:1311px){
+    header #main-nav{
+        display: none;
+    }
+
+    
+    .hero .right h6{
+        font-size: 1.5rem;
+    }
+    .hero .left img {
+        height: 400px;
+        margin-left: 0;
+        margin-right: 2rem;
+    }
+    
+    .hero .right h1 {
+        font-size: 3rem;
+        margin-bottom: 0.7rem;
+    }
+    .hero {
+        padding-top: 10rem;
+    }
+
+    .hero .right p {
+        line-height: 1.5;
+        margin-bottom: 0.7rem;
+        font-weight: 100;
+        letter-spacing: 0.01rem;
+    }
+
+    header {
+        clip-path: polygon(0 0, 100% 0,100% 100%,75% 89%,0 100%);
+    }
+
+    .btn{
+        padding:0.5rem;
+        font-size: large;    
+    }
+
+    *{
+        box-sizing:content-box;
+    }
+   
+    .btn span{
+        margin-left: 0.3rem;
+    }
+
+    section {
+        padding: 4rem 0;
+    }
+
+    section.about h1 {
+        margin-bottom: 0;
+    }    
+
+    section.about p{
+        margin-bottom: 0.5rem;
+    }
+
+    section.about h3 {
+        
+        margin-bottom: 0rem;
+    }
+
+    section.avocation .card-wrapper{
+        grid-template-columns: repeat(2,1fr);
+    }
+
+    section.avocation .card-wrapper .card h2{
+        margin-top: 1rem;
+    }
+}  
+
+@media(max-width:576px)
+{   
+    .hero
+    {
+        flex-direction: column;
+    }
+    
+    .container {
+       padding: 29px 15px;
+    }
+    header{
+        clip-path: polygon(0 0, 100% 0,100% 100%,74% 92%,0 100%);
+        background-image:  url("../images/remove_bg.png" );
+        background-size:cover;
+        background-position: center top; background-position: center center;
+        margin-top: -150px;
+    }
+
+    .hero {
+        align-items: center;
+        
+        padding-bottom: 16rem;
+    }
+
+    .hero .right{
+        position: absolute;
+        top: 260px;
+        padding: 3rem 1rem;
+        background: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.9));
+    }
+    .hamberger{
+        top: 3%;
+        right: 5%;
+    }
+
+   
+    .hero .left {
+        margin-top: -9rem;
+        margin-right: -1.9rem;
+        padding-bottom: 3rem; 
+    }
+
+    .hero .left img{
+        opacity: 0;
+    }
+    .about-inner-wrap{
+        flex-direction: column;
+    }
+    section.about .container .flex-1 .about-me-image {
+        height: 300px;
+    }
+
+    .about .right{
+        text-align: center;
+    }
+
+    section.about p{
+        text-align:justify;
+        margin: 0.5rem;
+    }
+    section.about .social a{
+        
+        height: 27px;
+        width: 27px;
+    }
+
+    section.about .social a img{
+        height: 65%;
+        width: 65%;
+    }
+
+    section.about h3 {
+        margin-top: 0.5rem;
+        margin-bottom: 1rem;
+        
+    }
+    section.about h1 {
+        margin-top: 0.7rem;
+    }
+
+    .about .right .social{
+        justify-content: center;
+        margin-top: 1.4rem;
+    }
+
+    section {
+        padding: 1rem 0;
+    }
+
+    section.avocation .card-wrapper {
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    section.freelancer h1 {
+        font-size: 1.5rem;
+        margin-bottom: 0.5rem;
+        margin-top: 1rem;
+    }
+
+    section.freelancer{
+        padding-bottom: 5rem;
+    }
+
+   .btn{
+    font-size: x-small;
+    font-weight: bolder;
+   }
+
+   .section-heading + p{
+    margin-bottom: 5rem;
+   }   
+
+   .mobile-nav{
+    padding: 0rem;
+    background-color: var(--dark);
+   }
+   .sub-mobile-nav{
+    padding-left: 0rem;
+   }
+   .sub-mobile-nav img{
+    padding: 1rem;
+    height: 55px;
+   }
+   .sub-mobile-nav li{
+    padding: 1rem;
+    /* background-color: var(--primary); */
+   }
+   .times{
+    top:2.35%;
+    left: 82%;
+   }
+
+   .times img {
+    padding: 1rem;
+    height: 23px;
+    }
+
+    footer .footer-social a img{
+        height: 17px;   
+    }
+
+    footer .logo{
+        height:60px;
+        margin: 0.5rem;
+    }
+
+    footer .copy-right {
+        font-size: small;
+    }
+
+    footer{
+        padding: 0.5rem;
+    }
 }
